2013-12-21  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.2 Added the perfect_balancing policy for Relaxed_kdtree, improved
        documentation and improve the speed of the reblance() algorithm by 10x.

2013-11-10  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.1 Fixed a bug on the rebalance() function in the kdtrees. All the
        unit tests on the tree where not taken into account, now they are.

2013-07-28  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.0 Added the new equal_iterator optimized for containers with
        strict invariant trees, such as idle_point_multiset, idle_box_multiset,
        etc.

2013-07-21  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.0.1 Some updates to the documentation.

2013-05-18  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Started to update the documentation, some errors have been found when
        compiling with SPATIAL_SAFER_ARITHMETICS. They are now fixed on the main
        branch.

2013-05-12  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Merged task_3432355 into the main branch. This officially results in
        the library being pushed to version 2.0.0. It now compiles on GCC and
        Clang, test on Windows under progress. Remain to update the
        documentation a little.

2013-03-20  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * task_3432355 Made access to functors inside iterators and containers
        more STL-like.

2013-03-16  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * task_3432355 Used a new, more common standard to name private or
        restricted class members (pre-fix _) by opposition to shadowing function
        parameters (post-fix _).

        * task_3432355 Interface for the neighbor_iterator is finally finalized
        and now the unit testing of neighbor_iterator can restart.
