@@ -129,6 +129,11 @@ contributing "Contributing".
 \page changelog Change Log
 \tableofcontents
 
+\section ver213 Version 2.1.3
+
+- Thanks to user Feldmarshall for reporting the bug:
+  https://sourceforge.net/p/spatial/tickets/1/. Fixed in this version.
+
 \section ver212 Version 2.1.2
 
 - \idle_point_multiset, \idle_box_multiset and other non-rebalancing containers
@@ -144,8 +149,8 @@ contributing "Contributing".
 
 - \idle_point_multiset, \idle_box_multiset and other non-rebalancing containers
   where suffering from a bug on the \c rebalance() function that was only
-  discovered recently. The problem is now fixed. On older versions, this
-  function will not work properly.
+  discovered recently. The problem only occurs in very large tree (with around
+  1,000,000 elements).
 
 \section ver210 Version 2.1.0
 
